viết lại code nhập dữ liêu, giờ chỉ cần thêm dữ liệu trực tiếp vào data/books, thêm dữ liệu sách selp-help

--- a/requirements.txt
+++ b/requirements.txt
@@ -343,3 +343,5 @@ zipp==3.17.0
 # The following packages are considered to be unsafe in a requirements file:
 # pip
 # setuptools
+pypdf==5.1.0
+langchain-text-splitters==0.0.2
